multiple different changes and alignments
Signed-off-by: David Kral <david.k.kral@oracle.com>